--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,6 +2,25 @@
 
 @main("Welcome to Play") {
 
-    @play20.welcome(message, style = "Java")
+    <nav class="top-bar" data-topbar>
+        <ul class="title-area">
+            <li class="name">
+                <h1><a href="#">My site</a></h1>
+            </li>
+        </ul>
+
+        <section class="top-bar-section">
+        @if(session.isEmpty){
+            <ul class="right">
+                <li><a href="@routes.Login.login">Login</a></li>
+            </ul>
+        } else {
+            <ul class="right">
+                <li><a href = "#">@session.get("name")</a></li>
+                <li><a href="@routes.Login.logout">Logout</a></li>
+            </ul>
+        }
+        </section>
+    </nav>
 
 }
