--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,7 +15,8 @@
         <script src="@routes.Assets.at("javascripts/underscore.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/d3.v3.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/foundation.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/foundation.min.js")" type="text/javascript" charset="${_response_encoding}"></script>
+        <script>$(document).foundation();</script>
     </head>
     <body>
         @content
