--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -16,6 +16,28 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/d3.v3.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/foundation.min.js")" type="text/javascript" charset="${_response_encoding}"></script>
+
+        <nav class="top-bar" data-topbar>
+            <ul class="title-area">
+                <li class="name">
+                    <h1><a href="#">My site</a></h1>
+                </li>
+            </ul>
+
+            <section class="top-bar-section">
+            @if(session.isEmpty){
+                <ul class="right">
+                    <li><a href="@routes.Login.login">Login</a></li>
+                </ul>
+            } else {
+                <ul class="right">
+                    <li><a href = "#">@session.get("name")</a></li>
+                    <li><a href="@routes.Login.logout">Logout</a></li>
+                </ul>
+            }
+            </section>
+        </nav>
+
         <script>$(document).foundation();</script>
     </head>
     <body>
