added function get5Products

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -22,5 +22,5 @@
         }
         </section>
     </nav>
-
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/frontend/application.js")"></script>
 }
