--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -28,7 +28,7 @@
                             </td>
                             <td>
                                 <h1>
-                                    <a href="#">My site</a>
+                                    <a href="@routes.Application.index">My site</a>
                                 </h1>
                             </td>
                         </tr>
@@ -46,7 +46,7 @@
                     <li><a href="@routes.Login.login">Login</a></li>
 
                     <li>
-                        <a href="#"> Sign In</a>
+                        <a href="@routes.Login.login"> Sign In</a>
                     </li>
                 </ul>
             } else {
