--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -3,7 +3,7 @@
 @main("Welcome to Play") {
 
     @helper.form(routes.Login.authenticate) {
-        <h1>Sign in</h1>
+        <h1>Login</h1>
         @if(form.hasGlobalErrors) {
             <p class="error">
             @form.globalError.message
