--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -3,15 +3,29 @@
 @main("Welcome to Play") {
 
     @helper.form(routes.Login.authenticate) {
-        <h1>Login</h1>
         @if(form.hasGlobalErrors) {
             <p class="error">
             @form.globalError.message
             </p>
         }
-        <input type="email" name="email" placeholder="Email" value="@form("email").value">
-        <input type="password" name="password" placeholder="Password">
-        <button type="submit">Login</button>
+        <fieldset>
+            <legend>Login</legend>
+            <table>
+                <tbody>
+                    <tr>
+                        <div class="large-4 columns">
+                            <input type="email" class="large-4 columns" name="email" placeholder="Email" value="@form("email").value">
+                        </div>
+                    </tr>
+                    <tr>
+                        <div class="large-2 columns">
+                            <input type="password" class="large-4 columns" name="password" placeholder="Password">
+                        </div>
+                    </tr>
+                </tbody>
+                <button type="submit">Login</button>
+            </table>
+        </fieldset>
     }
 
 }
