--- a/public/stylesheets/perso.css
+++ b/public/stylesheets/perso.css
@@ -19,3 +19,21 @@ table.titre td {
     background: #d3d3d3;
     border-color: #333;
 }
+
+[type="submit"] {
+    padding-top: 10px;
+    padding-bottom: 9px;
+}
+
+table.formulaire {
+    text-align: center;
+    margin: auto;
+}
+
+table.formulaire input {
+    margin: 0;
+}
+
+table.formulaire button {
+    margin: 0;
+}
