--- a/public/stylesheets/perso.css
+++ b/public/stylesheets/perso.css
@@ -37,3 +37,27 @@ table.formulaire input {
 table.formulaire button {
     margin: 0;
 }
+
+table tr:nth-of-type(even) {
+    background: #ffffff;
+}
+
+.history {
+    height : 280px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+    background-color : #272722;
+
+}
+.history a{
+    padding : 14px 5px 0px 5px;
+    margin: 5px 3px 0px 3px;
+    vertical-align: middle;
+    display: inline-block;
+}
+
+.history img {
+    max-width: 100%;
+    max-height:512px;
+}
