--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -32,10 +32,6 @@
             </ul>
 
             <section class="top-bar-section">
-                <ul class="left">
-            </ul>
-
-
             @if(session.isEmpty){
                 <ul class="right">
                     <li><a href="@routes.Login.login">Login</a></li>
@@ -49,9 +45,10 @@
                     <li><a href="@routes.Login.logout">Logout</a></li>
                 </ul>
             }
-
             </section>
         </nav>
+
+        <div></div>
         <script src="@routes.Assets.at("javascripts/underscore.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/d3.v3.min.js")" type="text/javascript"></script>
