--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,6 +4,12 @@
 
     <div class="history">
 
+        <a href="" class="Next"> Next </a>
+
+        <a href="" class="Happy">I get lucky !</a>
+
+        <a href="" class="Unhappy"> Nothings convinces me </a>
+
     </div>
 
 }
