--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -20,4 +20,6 @@
     <div class ="large-6 column"></div>
 </div>
 
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/frontend/application.js")"></script>
+
 }
