Ajout classe css pour article et dimensionnement des articles pour faire des blocs de 9 dans application.js

--- a/public/stylesheets/perso.css
+++ b/public/stylesheets/perso.css
@@ -15,6 +15,10 @@ table.titre td {
     margin-left: 5px;
 }
 
+.article {
+    border: 2px solid black;
+}
+
 .article.activated {
     background: #d3d3d3;
     border-color: limegreen;
