--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,20 +5,19 @@
     <div class="history">
     </div>
 
-
-<div class="large-24 column">
-    <div class="large-3 column"></div>
-    <div class="large-12 column">
+<!--<div id="main-content"> -->
+    <div class="row">
+            <div class="large-7 column" id="articles-content">
+            </div>
+            <div class="large-2 column">
+                <button class="Next"> Next </button>
+                <br/>
+                <button  class="Happy">I get lucky !</button>
+            </div>
+            <div class ="large-3 column"><p>   </p></div>
     </div>
-    <div class="large-3 column">
-        <button class="Next"> Next </button>
-        <br/>
-        <button  class="Happy">I get lucky !</button>
-    </div>
-    <div class ="large-6 column"></div>
-</div>
-
-    <script type="text/javascript" src="@routes.Assets.at("javascripts/articleDetails.js")"></script>
+<!--</div> -->
     <script type="text/javascript" src="@routes.Assets.at("javascripts/frontend/application.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/articleDetails.js")"></script>
 
 }
