--- a/public/stylesheets/perso.css
+++ b/public/stylesheets/perso.css
@@ -15,6 +15,16 @@ table.titre td {
     margin-left: 5px;
 }
 
+.article {
+    border: 2px solid black;
+}
+
+.article.activated {
+    background: #d3d3d3;
+    border-color: limegreen;
+    border-width: 3px;
+}
+
 [type="submit"] {
     padding-top: 10px;
     padding-bottom: 9px;
@@ -56,26 +66,3 @@ table tr:nth-of-type(even) {
     max-width: 100%;
     max-height:512px;
 }
-
-.article {
-    border: 3px solid rgb(125,125,125);
-    display: inline-block;
-    vertical-align: top;
-    margin: 10px;
-    /*width: 30%;*/
-}
-
-.article.activated {
-    background: #d3d3d3;
-    border-color: limegreen;
-    border-width: 3px;
-}
-
-.article_name {
-    display: none;
-}
-
-/*body
-{
-    background-color: #d3d3d3;
-}*/
