--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -38,7 +38,7 @@
                     <li><a href="@routes.Login.login">Login</a></li>
                 <li class="divider"></li>
                     <li>
-                        <a href="@routes.Login.login">Sign Up</a>
+                        <a href="@routes.Login.newuser">Sign Up</a>
                     </li>
             } else {
                 @if(session.get("isAdmin").equals("true")) {
