--- a/app/views/newuser.scala.html
+++ b/app/views/newuser.scala.html
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
 
-<html>
-<head>
-    <title>Inscription</title>
-	
-		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/normalize.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/foundation.min.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/perso.css")">
-
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-</head>
-<body>
+@main("My Site") {
 <form>
     <fieldset>
         <legend>New Profil</legend>
@@ -52,9 +40,4 @@
             </td></tr>
         </table>
     </fieldset>
-</form>
-
-    
-
-</body>
-</html>
+</form>}
